# microcred-rs

./: CLAUDE.md  Cargo.toml  README.md
src/: crypto.rs  issuer.rs  lib.rs  main.rs  verifier.rs
